# telegram_bots

./: .gitignore  README.md
VadikamModerBot/: Procfile  README.md  moderbot.py  requirements.txt  setup.cfg
vadikam_tg_hh_updater/: .env.example  README.md  bot.py  db.py  hh_api.py  pyproject.toml  utils.py
